[metadata]
name = chatelet
version = 0.1.0
description = A pubsub hub for data.gouv.fr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abulte/chatelet
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
py_modules = chatelet
python_requires = >= 3.9
install_requires =
    minicli
    progressist
    gunicorn
    gino
    aiohttp
    gino-aiohttp
    # in order to run async tasks within an async context
    nest_asyncio
    # rq w/ async support
    rq@git+git://github.com/rq/rq.git@fc7940c77b69704ad6c059385fd530c850e5f0be
    # migrations
    alembic
    psycopg2-binary

[options.extras_require]
test =
    aiohttp-devtools
    pytest
    pytest-asyncio
    aioresponses
    nest_asyncio
    pytest-cov
    pytest-mock

[options.entry_points]
console_scripts =
    chatelet = chatelet.cli:run
    chatelet-crawl = chatelet.crawl:run

[flake8]
max-line-length=99
