[metadata]
name = chatelet
version = 0.1.1
description = A pubsub hub for data.gouv.fr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abulte/chatelet
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
py_modules = chatelet
python_requires = >= 3.9
install_requires =
    minicli
    progressist
    gunicorn
    gino
    aiohttp
    gino-aiohttp
    jsonpath2
    pyyaml
    # fix bug in static for nested apps
    aiohttp-apispec@git+git://github.com/maximdanilchenko/aiohttp-apispec.git@397a48588d0c5c52b63f85ed1d927286bbaad8e7
    # in order to run async tasks within an async context
    nest_asyncio
    # rq w/ async support
    rq
    # migrations
    alembic
    psycopg2-binary

[options.extras_require]
test =
    aiohttp-devtools
    pytest
    pytest-asyncio
    aioresponses
    nest_asyncio
    pytest-cov
    pytest-mock
    fakeredis

[flake8]
max-line-length=99
